--- a/QRCodeScanner/app/src/main/res/layout/activity_main.xml
+++ b/QRCodeScanner/app/src/main/res/layout/activity_main.xml
@@ -7,16 +7,33 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <ImageView
-        android:id="@+id/qrCode"
-        android:layout_width="match_parent"
-        android:layout_height="400dp"/>
+        <ImageView
+            android:id="@+id/qrCode"
+            android:layout_width="200dp"
+            android:layout_height="200dp"/>
 
-    <Button
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Decode"
+            android:textSize="22sp"
+            android:id="@+id/qrDecode"/>
+
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="22sp"
+            android:id="@+id/tvContent"/>
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Decode"
-        android:textSize="22sp"
-        android:id="@+id/qrDecode"/>
+        android:layout_height="wrap_content">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="22sp"
+            android:id="@+id/tvWifiInfo"/>
+    </ScrollView>
+
 
 </LinearLayout>
