--- a/QRCodeScanner/app/src/main/res/layout/activity_main.xml
+++ b/QRCodeScanner/app/src/main/res/layout/activity_main.xml
@@ -34,6 +34,15 @@
             android:textSize="22sp"
             android:id="@+id/tvWifiInfo"/>
     </ScrollView>
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="22sp"
+            android:id="@+id/tvDistance"/>
+    </ScrollView>
 
 
 </LinearLayout>
