--- a/DemoOpenGL/app/src/main/res/layout/activity_main.xml
+++ b/DemoOpenGL/app/src/main/res/layout/activity_main.xml
@@ -8,5 +8,6 @@
     <com.example.demoopengl.OpenGLView
         android:id="@+id/openGLView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content" />
+
 </RelativeLayout>
