add opengl project

--- a/DemoOpenGL/app/src/main/res/layout/activity_main.xml
+++ b/DemoOpenGL/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <com.example.demoopengl.OpenGLView
+    <com.example.demoopengl.MyGLSurfaceView
         android:id="@+id/openGLView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
