--- a/SheetBottom/app/src/main/res/layout/bottom_sheet_persistent.xml
+++ b/SheetBottom/app/src/main/res/layout/bottom_sheet_persistent.xml
@@ -86,7 +86,7 @@
         app:layout_constraintTop_toBottomOf="@+id/view"
         app:srcCompat="@drawable/ic_email" />
 
-    <TextView
+    <EditText
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
